--- a/package.json
+++ b/package.json
@@ -10,12 +10,21 @@
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.26.1",
+    "axios-auth-refresh": "^3.2.2",
+    "cloudinary": "^1.29.0",
+    "cors": "^2.8.5",
+    "emailjs-com": "^3.2.0",
+    "js-file-download": "^0.4.12",
+    "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-paginate": "^8.1.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-slick": "^0.28.1",
+    "react-toastify": "^8.2.0",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
