--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.12.3",
+    "@material-ui/data-grid": "^4.0.0-alpha.37",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/styles": "^4.11.4",
     "@mui/material": "^5.5.3",
@@ -13,6 +14,7 @@
     "axios": "^0.26.1",
     "axios-auth-refresh": "^3.2.2",
     "cloudinary": "^1.29.0",
+    "cloudinary-react": "^1.7.2",
     "cors": "^2.8.5",
     "emailjs-com": "^3.2.0",
     "js-file-download": "^0.4.12",
